Removed Depreciated Features

--- a/src/usr/libexec/webmin/turtlefirewall/CHANGELOG
+++ b/src/usr/libexec/webmin/turtlefirewall/CHANGELOG
@@ -195,6 +195,7 @@ CHANGELOG
            	Bug : Fixed MAC filtering. ( no ip required )
            	Bug : Fixed Mangle table flush on firewall stop.
            	Bug : Migrated ip_conntrack_max to nf_conntrack_max.
+           	Bug : Limit zone name max charcaters.
            	Connection Tracking : Replaced "-m state --state" with "-m conntrack --ctstate".
 		Connection Tracking : Enabled automatic helpers. ( Todo : migrate to CT target )
 		Connection Tracking : Enabled connection marking.
