--- a/src/usr/libexec/webmin/turtlefirewall/CHANGELOG
+++ b/src/usr/libexec/webmin/turtlefirewall/CHANGELOG
@@ -196,6 +196,7 @@ CHANGELOG
            	Bug : Fixed Mangle table flush on firewall stop.
            	Bug : Migrated ip_conntrack_max to nf_conntrack_max.
            	Bug : Limit zone name max characters.
+           	Bug : Fixed zone deletion verification.
            	Connection Tracking : Replaced "-m state --state" with "-m conntrack --ctstate".
 		Connection Tracking : Enabled automatic helpers. ( Todo : migrate to CT target )
 		Connection Tracking : Enabled connection marking.
