Add Conntrack Raw Rules

--- a/src/usr/libexec/webmin/turtlefirewall/CHANGELOG
+++ b/src/usr/libexec/webmin/turtlefirewall/CHANGELOG
@@ -208,4 +208,5 @@ CHANGELOG
 		OS : Kernel 6 compatibility.
            	Feature : Removed pptp, sip, h323 and tftp kernel module options.
 		Feature : Added Preroute Raw Rules. ( Conntrack Preroute : for use with CT helpers )
+		Feature : Added Raw Rules. ( Conntrack : for use with CT helpers )
 		Connection Tracking : Migrated helpers to CT target.
