--- a/src/usr/libexec/webmin/turtlefirewall/CHANGELOG
+++ b/src/usr/libexec/webmin/turtlefirewall/CHANGELOG
@@ -209,9 +209,10 @@ CHANGELOG
 		Feature : Added Preroute Raw Rules. ( Conntrack Preroute : for use with CT helpers )
 		Feature : Added Raw Rules. ( Conntrack : for use with CT helpers )
 		Connection Tracking : Migrated helpers to CT target.
-03-05-2023 v.2.2
+03-06-2023 v.2.2
            - CentOS/RHEL 9
            	Bug : Code cleanup.
+           	Bug : Fixed rename and delete of multi select items used in rules.
 		Feature : Added Flow Risk support.
 		Feature : Added Optional Domain Blacklist.
 		Feature : Added Rate Limit support.
