--- a/src/usr/libexec/webmin/turtlefirewall/CHANGELOG
+++ b/src/usr/libexec/webmin/turtlefirewall/CHANGELOG
@@ -213,6 +213,7 @@ CHANGELOG
            - CentOS/RHEL 9
            	Bug : Code cleanup.
            	Bug : Fixed rename and delete of multi select items used in rules.
+           	Bug : Fixed port or port range verification in rules.
 		Feature : Added Flow Risk support.
 		Feature : Added Optional Domain, JA3 and SHA1 Blacklist support.
 		Feature : Added Rate Limit support.
