--- a/CHANGELOG
+++ b/CHANGELOG
@@ -221,4 +221,5 @@ CHANGELOG
            - Feature : Improve Blacklist view.
 18-02-2024 v.2.3
            - Feature : Extend nDPI support.
+           - Logging : Replaced JA3 server with JA4 client.
            - Theme : Standardize Webmin images.
