--- a/CHANGELOG
+++ b/CHANGELOG
@@ -222,4 +222,5 @@ CHANGELOG
 18-02-2024 v.2.3
            - Feature : Extend nDPI support.
            - Logging : Replaced JA3 server with JA4 client.
+           - Logging : Migrate domain blacklist to nDPI risk id 27.
            - Theme : Standardize Webmin images.
