--- a/CHANGELOG
+++ b/CHANGELOG
@@ -221,6 +221,7 @@ CHANGELOG
            - Feature : Improve Blacklist view.
 18-02-2024 v.2.3
            - Bug : Removed depreciated HTML <tt> tag.
+           - Bug : Limit Domain Blacklist size.
            - Feature : Extend nDPI support.
            - Logging : Replaced JA3 server with JA4 client.
            - Theme : Standardize Webmin images.
