--- a/CHANGELOG
+++ b/CHANGELOG
@@ -220,9 +220,12 @@ CHANGELOG
            - Feature : Removed Blacklist Flow Reports. 
            - Feature : Improve Blacklist view.
 18-02-2024 v.2.3
+           - Bug : Fixed --mac-source masquerade.
            - Bug : Removed depreciated HTML <tt> tag.
-           - Bug : Limit Domain Blacklist size.
+           - Bug : Limit Blacklist sizes.
            - Bug : Remove Domain Blacklist wildcard match.
+           - Bug : Fixed zone name item verification.
+           - Feature : Rework action log format.
            - Feature : Extend nDPI support.
            - Logging : Replaced JA3 server with JA4 client.
            - Theme : Standardize Webmin images.
