--- a/CHANGELOG
+++ b/CHANGELOG
@@ -230,5 +230,6 @@ CHANGELOG
            - Feature : Extend nDPI support.
            - Logging : Replaced JA3 server with JA4 client.
            - Theme : Rework group item selection.
-           - Theme : Split Port and nDPI service column in rule views
+           - Theme : Split Port and nDPI service column in rule views.
+           - Theme : Update edit forms to use ui standard.
            - Theme : Standardize Webmin images.
