--- a/CHANGELOG
+++ b/CHANGELOG
@@ -226,6 +226,7 @@ CHANGELOG
            - Bug : Limit Blacklist sizes.
            - Bug : Remove Domain Blacklist wildcard match.
            - Bug : Fixed zone name item verification.
+           - Bug : Fixed Rate Limit apply when used in multiple rules.
            - Feature : Rework action log format.
            - Feature : Extend nDPI support.
            - Logging : Replaced JA3 server with JA4 client.
