--- a/CHANGELOG
+++ b/CHANGELOG
@@ -242,6 +242,8 @@ CHANGELOG
            - Bug : Fixed ApplyRule risk variable not initialised.
            - Bug : Fixed GeoIP include for Masquerade and Redirect.
            - Bug : Include reserved name check on item rename.
+           - Bug : Fixed rule highlighting on move.
+           - Bug : Fixed rule tcp/udp ALL ports display.
            - Services : Removed depreciated smtps TCP port 465 service.
            - Services : Added DNS over TLS TCP port 853 service.
            - Feature : nDPI 4.9.11 support.
