--- a/CHANGELOG
+++ b/CHANGELOG
@@ -258,5 +258,6 @@ CHANGELOG
            - Services : Removed depreciated kazaa and edonkey services.
            - Feature : nDPI 4.13 support.
            - Feature : Add clamp_mss_to_pmtu option.
+           - Feature : Add nDPI ACCEPT support for Hostnames.
            - Todo : Translate new features.
            - Todo : Fix backup.cgi restore upload.
