Feature : Remove JA3 logging.

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -261,6 +261,7 @@ CHANGELOG
            - Feature : Add nDPI ACCEPT support for Hostnames.
 30-04-2025 v.2.6
            - Feature : nDPI 4.15 support.
+           - Feature : Remove JA3 logging.
            - Bug : Fixed translation of HTML character entities.
            - OS : Remove unused iptables_restore_emu.
            - Todo : Translate new features.
