--- a/CHANGELOG
+++ b/CHANGELOG
@@ -264,6 +264,7 @@ CHANGELOG
            - Feature : Remove JA3 logging.
            - Feature : Remove JA3 Blacklist.
            - Bug : Fixed translation of HTML character entities.
+           - Bug : Fixed Flow Statistics.
            - OS : Remove unused iptables_restore_emu.
            - Todo : Translate new features.
            - Todo : Fix backup.cgi restore upload.
